# Extreme-C

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  book-outline.txt
ch01-essential-features/: CMakeLists.txt  ExtremeC_examples_chapter1_1.c  ExtremeC_examples_chapter1_10.c  ExtremeC_examples_chapter1_15.c  ExtremeC_examples_chapter1_16.c  ExtremeC_examples_chapter1_17.c  ExtremeC_examples_chapter1_18.c  ExtremeC_examples_chapter1_19.c  ExtremeC_examples_chapter1_20.c  ExtremeC_examples_chapter1_21.c  ExtremeC_examples_chapter1_22.c  ExtremeC_examples_chapter1_23.c  ExtremeC_examples_chapter1_24.c  ExtremeC_examples_chapter1_3.c  ExtremeC_examples_chapter1_5.c  ExtremeC_examples_chapter1_7.c  ExtremeC_examples_chapter1_9.c
ch02/: CMakeLists.txt  ExtremeC_exampels_chapter2_10.c  ExtremeC_exampels_chapter2_13.c  ExtremeC_exampels_chapter2_15.c  ExtremeC_exampels_chapter2_2.c  ExtremeC_exampels_chapter2_5.c  ExtremeC_exampels_chapter2_6.c  ExtremeC_exampels_chapter2_8.c  ExtremeC_exampels_chapter2_9.c  ExtremeC_examples_chapter2_1.c  ExtremeC_examples_chapter2_11.c  ExtremeC_examples_chapter2_12.c  ExtremeC_examples_chapter2_14.c  ExtremeC_examples_chapter2_3.c  ExtremeC_examples_chapter2_4.c  ExtremeC_examples_chapter2_7.c
ch02-compilation-and-linking/: CMakeLists.txt  ExtremeC_examples_chapter2_1.c  ExtremeC_examples_chapter2_1.h  ExtremeC_examples_chapter2_1_main.c  ExtremeC_examples_chapter2_2.c  ExtremeC_examples_chapter2_3.c  ExtremeC_examples_chapter2_4_add.c  ExtremeC_examples_chapter2_4_defines.h  ExtremeC_examples_chapter2_4_main.c  ExtremeC_examples_chapter2_4_multiply.c  ExtremeC_examples_chapter2_5_add.c  ExtremeC_examples_chapter2_5_main.c  ExtremeC_examples_chapter2_6_add_1.c  ExtremeC_examples_chapter2_6_add_2.c
ch03/: CMakeLists.txt  ExtremeC_examples_chapter3_1.c  ExtremeC_examples_chapter3_1.h  ExtremeC_examples_chapter3_1.s  ExtremeC_examples_chapter3_10.c  ExtremeC_examples_chapter3_1_main.c  ExtremeC_examples_chapter3_2.c  ExtremeC_examples_chapter3_3.c  ExtremeC_examples_chapter3_4_add.c  ExtremeC_examples_chapter3_4_defines.h  ExtremeC_examples_chapter3_4_main.c  ExtremeC_examples_chapter3_4_multiply.c  ExtremeC_examples_chapter3_5_add.c  ExtremeC_examples_chapter3_5_main.c  ExtremeC_examples_chapter3_6_add_1.c  ExtremeC_examples_chapter3_6_add_2.c  ExtremeC_examples_chapter3_7.c  ExtremeC_examples_chapter3_7_funcs.c  ExtremeC_examples_chapter3_8_2d.c  ExtremeC_examples_chapter3_8_3d.c  ExtremeC_examples_chapter3_8_geometry.h  ExtremeC_examples_chapter3_8_trigon.c  ExtremeC_examples_chapter3_9.c
ch03-object-files/: CMakeLists.txt  ExtremeC_examples_chapter3_1.c  ExtremeC_examples_chapter3_1_funcs.c  ExtremeC_examples_chapter3_2_2d.c  ExtremeC_examples_chapter3_2_3d.c  ExtremeC_examples_chapter3_2_geometry.h  ExtremeC_examples_chapter3_2_trigon.c  ExtremeC_examples_chapter3_3.c  ExtremeC_examples_chapter3_4.c
ch04/: CMakeLists.txt  ExtremeC_examples_chapter4_1.c  ExtremeC_examples_chapter4_1.h  ExtremeC_examples_chapter4_1_main.c  ExtremeC_examples_chapter4_2.cpp  ExtremeC_examples_chapter4_2.h  ExtremeC_examples_chapter4_2_main.cpp  ExtremeC_examples_chapter4_3.c  ExtremeC_examples_chapter4_3.h  ExtremeC_examples_chapter4_3_main.c  ExtremeC_examples_chapter4_4_car.c  ExtremeC_examples_chapter4_4_car.h  ExtremeC_examples_chapter4_4_engine.c  ExtremeC_examples_chapter4_4_engine.h  ExtremeC_examples_chapter4_4_main.c  ExtremeC_examples_chapter4_5_gun.c  ExtremeC_examples_chapter4_5_gun.h  ExtremeC_examples_chapter4_5_main.c  ExtremeC_examples_chapter4_5_player.c  ExtremeC_examples_chapter4_5_player.h
ch04-process-memory-structure/: CMakeLists.txt  ExtremeC_examples_chapter4_1.c  ExtremeC_examples_chapter4_2.c  ExtremeC_examples_chapter4_3.c  ExtremeC_examples_chapter4_4.c  ExtremeC_examples_chapter4_5.c  ExtremeC_examples_chapter4_6.c  ExtremeC_examples_chapter4_7.c  ExtremeC_examples_chapter4_8.c
ch05/: CMakeLists.txt  ExtremeC_examples_chapter5_1.c  ExtremeC_examples_chapter5_2_main.c  ExtremeC_examples_chapter5_2_person.c  ExtremeC_examples_chapter5_2_person.h  ExtremeC_examples_chapter5_2_person_p.h  ExtremeC_examples_chapter5_2_student.c  ExtremeC_examples_chapter5_2_student.h  ExtremeC_examples_chapter5_3_main.c  ExtremeC_examples_chapter5_3_person.c  ExtremeC_examples_chapter5_3_person.h  ExtremeC_examples_chapter5_3_student.c  ExtremeC_examples_chapter5_3_student.h  ExtremeC_examples_chapter5_4_animal.c  ExtremeC_examples_chapter5_4_animal.h  ExtremeC_examples_chapter5_4_animal_p.h  ExtremeC_examples_chapter5_4_cat.c  ExtremeC_examples_chapter5_4_cat.h  ExtremeC_examples_chapter5_4_duck.c  ExtremeC_examples_chapter5_4_duck.h  ExtremeC_examples_chapter5_4_main.c  ExtremeC_examples_chapter5_5.c  ExtremeC_examples_chapter5_5.cpp  ExtremeC_examples_chapter5_6.c  ExtremeC_examples_chapter5_6.cpp  ExtremeC_examples_chapter5_7.cpp  ExtremeC_examples_chapter5_8_list.c  ExtremeC_examples_chapter5_8_list.h  ExtremeC_examples_chapter5_8_main.c
ch05-stack-and-heap/: CMakeLists.txt  ExtremeC_examples_chapter5_1.c  ExtremeC_examples_chapter5_2.c  ExtremeC_examples_chapter5_3.c  ExtremeC_examples_chapter5_4.c  ExtremeC_examples_chapter5_5.c  ExtremeC_examples_chapter5_6.c
ch06-encapsulation-theory/: CMakeLists.txt  ExtremeC_examples_chapter6_1_main.c  ExtremeC_examples_chapter6_2.cpp  ExtremeC_examples_chapter6_2.h  ExtremeC_examples_chapter6_3.c
ch07-composition-and-aggregation/: CMakeLists.txt  ExtremeC_examples_chapter7_1_car.c  ExtremeC_examples_chapter7_1_car.h  ExtremeC_examples_chapter7_1_engine.c  ExtremeC_examples_chapter7_1_engine.h  ExtremeC_examples_chapter7_1_main.c  ExtremeC_examples_chapter7_2_gun.c  ExtremeC_examples_chapter7_2_gun.h  ExtremeC_examples_chapter7_2_main.c  ExtremeC_examples_chapter7_2_player.c  ExtremeC_examples_chapter7_2_player.h
ch08-inheritance-and-polymorphism/: CMakeLists.txt  ExtremeC_examples_chapter8_1.c  ExtremeC_examples_chapter8_2_main.c  ExtremeC_examples_chapter8_2_person.c  ExtremeC_examples_chapter8_2_person.h  ExtremeC_examples_chapter8_2_person_p.h  ExtremeC_examples_chapter8_2_student.c  (+14 more)
(+363 files in other folders)
