cmake_minimum_required(VERSION 3.8)

#add_subdirectory(ch01)
#add_subdirectory(ch02)
#add_subdirectory(ch03)
#add_subdirectory(ch04)
#add_subdirectory(ch05)
add_subdirectory(ch06-encapsulation-theory)
add_subdirectory(ch07-composition-and-aggregation)
#add_subdirectory(ch10)
#add_subdirectory(ch11)
#add_subdirectory(ch12)
#add_subdirectory(ch13)
#add_subdirectory(ch14)
#add_subdirectory(ch15)
#add_subdirectory(ch16)
#add_subdirectory(ch17)
add_subdirectory(ch18-process-synchronization)
#add_subdirectory(ch19)
# add_subdirectory(ch20)
# add_subdirectory(ch21)
