set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(ex2_1.out
  ExtremeC_examples_chapter2_1.c
)

add_executable(ex2_2.out
  ExtremeC_examples_chapter2_2.c
)

add_executable(ex2_3.out
  ExtremeC_examples_chapter2_3.c
)

add_executable(ex2_4.out
  ExtremeC_examples_chapter2_4.c
)

add_executable(ex2_5.out
  ExtremeC_examples_chapter2_5.c
)

add_executable(ex2_6.out
  ExtremeC_examples_chapter2_6.c
)

add_executable(ex2_7.out
  ExtremeC_examples_chapter2_7.c
)

add_executable(ex2_9.out
  ExtremeC_examples_chapter2_9.c
)

add_executable(ex2_10.out
  ExtremeC_examples_chapter2_10.c
)

add_executable(ex2_11.out
  ExtremeC_examples_chapter2_11.c
)

add_executable(ex2_12.out
  ExtremeC_examples_chapter2_12.c
)

add_executable(ex2_13.out
  ExtremeC_examples_chapter2_13.c
)

add_executable(ex2_14.out
  ExtremeC_examples_chapter2_14.c
)

add_executable(ex2_15.out
  ExtremeC_examples_chapter2_15.c
)
