set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(ex4_1.out
  ExtremeC_examples_chapter4_1.c
)

add_executable(ex4_2.out
  ExtremeC_examples_chapter4_2.c
)

add_executable(ex4_3.out
  ExtremeC_examples_chapter4_3.c
)

add_executable(ex4_4.out
  ExtremeC_examples_chapter4_4.c
)

add_executable(ex4_5.out
  ExtremeC_examples_chapter4_5.c
)

add_executable(ex4_6.out
  ExtremeC_examples_chapter4_6.c
)

add_executable(ex4_7.out
  ExtremeC_examples_chapter4_7.c
)

add_executable(ex4_8.out
  ExtremeC_examples_chapter4_8.c
)
