set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(ex4_1.out
  ExtremeC_examples_chapter4_1.c
  ExtremeC_examples_chapter4_1_main.c
)

add_executable(ex4_2.out
  ExtremeC_examples_chapter4_2.cpp
  ExtremeC_examples_chapter4_2_main.cpp
)

add_executable(ex4_3.out
  ExtremeC_examples_chapter4_3.c
  ExtremeC_examples_chapter4_3_main.c
)

add_executable(ex4_4.out
  ExtremeC_examples_chapter4_4_car.c
  ExtremeC_examples_chapter4_4_engine.c
  ExtremeC_examples_chapter4_4_main.c
)

add_executable(ex4_5.out
  ExtremeC_examples_chapter4_5_player.c
  ExtremeC_examples_chapter4_5_gun.c
  ExtremeC_examples_chapter4_5_main.c
)

