set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(ex6_1.out
  ExtremeC_examples_chapter6_1.c
  ExtremeC_examples_chapter6_1_main.c
)

add_executable(ex6_2.out
  ExtremeC_examples_chapter6_2.cpp
  ExtremeC_examples_chapter6_2_main.cpp
)

add_executable(ex6_3.out
  ExtremeC_examples_chapter6_3.c
  ExtremeC_examples_chapter6_3_main.c
)
