set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(ex7_1.out
  ExtremeC_examples_chapter7_1_car.c
  ExtremeC_examples_chapter7_1_engine.c
  ExtremeC_examples_chapter7_1_main.c
)

add_executable(ex7_2.out
  ExtremeC_examples_chapter7_2_player.c
  ExtremeC_examples_chapter7_2_gun.c
  ExtremeC_examples_chapter7_2_main.c
)

